# WordFilter

./: .gitignore  LICENSE  README.md  analyze.sh.bak  filter.sh  gen.sh  join.sh  pyproject.toml  remove.sh  run.sh  tiers.py  unigram_freq.txt
data/: unigram_freq_bad.txt
data/dvorak/: homerow_basic.txt  homerow_middle.txt  homerow_middle_full.txt  homerow_middle_remove.txt  remove_homerow_basic.txt
scripts/: analyze.sh  common.sh  dvorak.sh  homerow_basic.sh  hunspell.sh
scripts/lessons/: colemak.sh  dvorak.sh  qwerty.sh
scripts/misc/: json_list.sh
src/analyze/: main.py
src/word_filter/: errors.py  filter.py  main.py  remove.py  util.py
test/: filter_base.py  test_filter.py  test_filter_csv.py  test_filter_list.py  test_misc.py  test_remove.py  test_tests.py
